[gd_scene load_steps=23 format=2]

[ext_resource path="res://Axl_mod/Player/Projectiles/BossSpecials/SpecialStart.gd" type="Script" id=1]
[ext_resource path="res://Axl_mod/Player/Axl_Material_Shader.tres" type="Material" id=2]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=3]
[ext_resource path="res://src/Effects/Textures/flash.png" type="Texture" id=4]
[ext_resource path="res://src/Sounds/FX - Giga Crash Start 2.ogg" type="AudioStream" id=5]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossSpecials/boss_special.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossSpecials/boss_sprites.tres" type="SpriteFrames" id=7]
[ext_resource path="res://src/Effects/ShieldBreak/shieldbreak.res" type="SpriteFrames" id=8]
[ext_resource path="res://src/Sounds/Sunflower - Desperation.ogg" type="AudioStream" id=9]
[ext_resource path="res://src/Sounds/Manowar - FlashPrepare.wav" type="AudioStream" id=10]
[ext_resource path="res://src/Sounds/Yeti - Desperation.ogg" type="AudioStream" id=11]
[ext_resource path="res://src/Sounds/Mantis - Desperation.ogg" type="AudioStream" id=12]
[ext_resource path="res://src/Sounds/Rooster - Rage.ogg" type="AudioStream" id=13]
[ext_resource path="res://src/Sounds/Trilobyte - Desperation.ogg" type="AudioStream" id=14]
[ext_resource path="res://src/Sounds/Antonion - Desperation.wav" type="AudioStream" id=15]
[ext_resource path="res://src/Sounds/Antionion - GravityCrash.wav" type="AudioStream" id=16]
[ext_resource path="res://src/Sounds/Lumine - Transform.wav" type="AudioStream" id=17]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 256, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 256, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 256, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 256, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 37.0
} ]

[node name="SpecialIllusion" type="Node2D"]
pause_mode = 2
z_index = 20
z_as_relative = false
script = ExtResource( 1 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 2 )
position = Vector2( 0, -6 )
frames = ExtResource( 6 )
animation = "idle"
playing = true

[node name="bossSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -3, -29 )
frames = ExtResource( 7 )
animation = "manowar"
frame = 3
playing = true
flip_h = true

[node name="flash" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 0, -6 )
frames = SubResource( 5 )
frame = 3
playing = true

[node name="transform" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -17 )
z_index = 25
frames = ExtResource( 8 )
frame = 9
playing = true

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 6.118
autoplay = true
max_distance = 600.0
bus = "SFX"
script = ExtResource( 3 )

[node name="transform_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
volume_db = 2.0
max_distance = 600.0
bus = "SFX"

[node name="antonion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = -2.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 3 )

[node name="manowar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = 2.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 3 )

[node name="mantis" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = 2.0
max_distance = 600.0
bus = "SFX"

[node name="panda" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = 4.0
pitch_scale = 0.73
max_distance = 600.0
bus = "SFX"

[node name="rooster" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = 2.0
max_distance = 900.0
bus = "SFX"

[node name="sunflower" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
max_distance = 600.0
attenuation = 1.93187
bus = "SFX"
script = ExtResource( 3 )

[node name="trilobyte" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 2 )
stream = ExtResource( 14 )
volume_db = 6.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 3 )

[node name="yeti" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = 4.0
max_distance = 600.0
bus = "SFX"

[node name="antonion_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
max_distance = 600.0
bus = "SFX"
script = ExtResource( 3 )
